--- a/IntellAgent.CubeList.Wcf/Web.config
+++ b/IntellAgent.CubeList.Wcf/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <configuration>
   
   <system.web>
@@ -9,17 +9,20 @@
     <modules runAllManagedModulesForAllRequests="true">
       <add name="UrlRoutingModule" type="System.Web.Routing.UrlRoutingModule, System.Web, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
     </modules>
+        <handlers>
+            <add name="POST Map" path="*.wsdl" verb="*" modules="ProtocolSupportModule" resourceType="Unspecified" />
+        </handlers>
   </system.webServer>
 
   <system.serviceModel>
-    <serviceHostingEnvironment aspNetCompatibilityEnabled="true"/>
+    <serviceHostingEnvironment aspNetCompatibilityEnabled="true" />
     <standardEndpoints>
       <webHttpEndpoint>
         <!-- 
             Configure the WCF REST service base address via the global.asax.cs file and the default endpoint 
             via the attributes on the <standardEndpoint> element below
         -->
-        <standardEndpoint name="" helpEnabled="true" automaticFormatSelectionEnabled="true"/>
+        <standardEndpoint name="" helpEnabled="true" automaticFormatSelectionEnabled="true" crossDomainScriptAccessEnabled="true" defaultOutgoingResponseFormat="Json" />
       </webHttpEndpoint>
     </standardEndpoints>
   </system.serviceModel>
